testsuite/tests/grammar/invalid_list/invalid-astlist.lkt
grammar foo_grammar {
    @main_rule main_rule <- ASTList[Example, Example]+(Example("example"))
}
